--- a/index.html
+++ b/index.html
@@ -5,9 +5,36 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Discord</title>
-        <link rel="stylesheet" href="style.css">
+        <!-- Google font  -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <header>
+            <div class="top clearfix">
+                <!-- logo  -->
+                <div class="logo">
+                    <img src="img/logo.svg" alt="Logo Discard">
+                </div>
+                <!-- menu di navigazione  -->
+                <nav class="menu">
+                        <ul>
+                            <li><a href="#">Scarica</a></li>
+                            <li><a href="#">Perchè Discord</a></li>
+                            <li><a href="#">Nitro</a></li>
+                            <li><a href="#">Sicurezza</a></li>
+                            <li><a href="#">Assistenza</a></li>
+                        </ul>
+                </nav>
+                <!-- bottone Accedi  -->
+                <div class="accedi">
+                    <button class="accedi-button">Accedi</button>
+                </div>
+            </div>
+        </header>
+
         
     </body>
 </html>
