--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+        <!-- libreria cdnjs -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -33,8 +35,15 @@
                     <button class="accedi-button">Accedi</button>
                 </div>
             </div>
+            <!-- hero  -->
+            <section class="hero-section">
+                <div class="top box-title centered">
+                    <h1>Il tuo posto per parlare</h1>
+                    <p>Che tu faccia parte di un gruppo scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso.</p>
+                    <button class="button1"><i class="fas fa-long-arrow-alt-down"></i>Scarica per Mac</button>
+                    <button class="button1 button2">Apri Discard nel tuo browser</button>
+                </div>
+            </section>
         </header>
-
-        
     </body>
 </html>
