Aggiunto prima section del main

--- a/index.html
+++ b/index.html
@@ -41,9 +41,30 @@
                     <h1>Il tuo posto per parlare</h1>
                     <p>Che tu faccia parte di un gruppo scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso.</p>
                     <button class="button1"><i class="fas fa-long-arrow-alt-down"></i>Scarica per Mac</button>
-                    <button class="button1 button2">Apri Discard nel tuo browser</button>
+                    <button class="button1 button2">Apri Discord nel tuo browser</button>
                 </div>
             </section>
         </header>
+
+
+        <!-- corpo principale  -->
+        <main>
+            <section class="top clearfix">
+                <div class="item1">
+                    <img src="img/item1.svg" alt="">
+                </div>
+                <div class="testo1">
+                    <h2>Un luogo a <br> invito con tutto lo spazio necessario per parlare</h2>
+                    <p>I server Discord sono organizzari in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>   
+            </section>
+
+
+            <section></section>
+            <section></section>
+            <section></section>
+        </main>
+
+
     </body>
 </html>
