Aggiunto seconda sezione del main

--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
                 </div>
             </section>
         </header>
-
-
         <!-- corpo principale  -->
         <main>
+            <!-- prima section  -->
             <section class="top clearfix">
                 <div class="item1">
                     <img src="img/item1.svg" alt="">
@@ -58,9 +57,20 @@
                     <p>I server Discord sono organizzari in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                 </div>   
             </section>
+            <!-- seconda sezione  -->
+            <section class="top clearfix">
+                <div class="testo1">
+                    <h2>Dove trovarsi è<br>facile</h2>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi instantaneamente senza dover chiamare.</p>
+                </div>   
+                <div class="item1">
+                    <img src="img/item2.svg" alt="">
+                </div>
+            </section>
 
 
-            <section></section>
+
+
             <section></section>
             <section></section>
         </main>
