Aggiunto terza sezione del main

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <img src="img/item1.svg" alt="">
                 </div>
                 <div class="testo1">
-                    <h2>Un luogo a <br> invito con tutto lo spazio necessario per parlare</h2>
+                    <h2>Un luogo a <br> invito con tutto <br> lo spazio necessario per parlare</h2>
                     <p>I server Discord sono organizzari in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                 </div>   
             </section>
@@ -67,11 +67,17 @@
                     <img src="img/item2.svg" alt="">
                 </div>
             </section>
-
-
-
-
-            <section></section>
+            <!-- terza sezione  -->
+            <section class="top clearfix">
+                <div class="item1">
+                    <img src="img/item3.svg" alt="">
+                </div>
+                <div class="testo1">
+                    <h2>Da pochi<br>a un fandom</h2>
+                    <p>Dai inizio a una comunity di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro. </p>
+                </div>   
+            </section>
+            
             <section></section>
         </main>
 
