Aggiunta quarta e ultima sezione main

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!-- prima section  -->
             <section class="top clearfix">
                 <div class="item1">
-                    <img src="img/item1.svg" alt="">
+                    <img src="img/item1.svg" alt="Immagine prima sezione">
                 </div>
                 <div class="testo1">
                     <h2>Un luogo a <br> invito con tutto <br> lo spazio necessario per parlare</h2>
@@ -64,21 +64,31 @@
                     <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi instantaneamente senza dover chiamare.</p>
                 </div>   
                 <div class="item1">
-                    <img src="img/item2.svg" alt="">
+                    <img src="img/item2.svg" alt="Immagine seconda sezione">
                 </div>
             </section>
             <!-- terza sezione  -->
             <section class="top clearfix">
                 <div class="item1">
-                    <img src="img/item3.svg" alt="">
+                    <img src="img/item3.svg" alt="Immagine terza sezione">
                 </div>
                 <div class="testo1">
                     <h2>Da pochi<br>a un fandom</h2>
-                    <p>Dai inizio a una comunity di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro. </p>
+                    <p>Dai inizio a una comunity di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
                 </div>   
             </section>
-            
-            <section></section>
+
+
+            <!-- quarta sezione  -->
+            <section class="top">
+                <div class="testo-sezione4">
+                    <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                    <img src="img/item4-big.svg" alt="Immagine quarta sezione">
+                    <h3>Pronto a iniziare una nuova avventura?</h3>
+                    <button class="button1 button-main"><i class="fas fa-long-arrow-alt-down"></i>Scarica per Mac</button>
+                </div>  
+            </section>
         </main>
 
 
