--- a/index.html
+++ b/index.html
@@ -90,6 +90,29 @@
                 </div>  
             </section>
         </main>
+        <!-- footer  -->
+        <footer>
+            <section class="top clearfix">
+                <div class="div-footer">
+                    <h3>Il tuo posto per parlare</h3>
+                    <img src="img/ita.png" alt="Lingua">
+                    <span>Italiano </span><span>&or;</span>
+                    <div class="social">
+                        <a href=""></a><i class="fab fa-twitter"></i></a>
+                        <a href=""></a><i class="fab fa-instagram"></i></a>
+                        <a href=""></a><i class="fab fa-facebook"></i></a>
+                        <a href=""></a><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+               
+               
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+
+            </section>
+        </footer>
 
 
     </body>
