Aggiunto seconda e ultima parte del footer

--- a/index.html
+++ b/index.html
@@ -92,73 +92,71 @@
         </main>
         <!-- footer  -->
         <footer>
-            <section class="top clearfix">
-                <!-- lingue e social  -->
+            <section class="top clearfix" id="linea">
+                <!-- prima parte footer con lingua e social  -->
                 <div class="div-footer lingua-social">
-                    <h3>Il tuo posto per parlare</h3>
-                    <img src="img/ita.png" alt="Lingua">
-                    <span>Italiano </span><span>&or;</span>
-                    <div class="social">
-                        <a href=""><i class="fab fa-twitter"></i></a>
-                        <a href=""><i class="fab fa-instagram"></i></a>
-                        <a href=""><i class="fab fa-facebook"></i></a>
-                        <a href=""><i class="fab fa-youtube"></i></a>
-                    </div>
+                        <h3>Il tuo posto per parlare</h3>
+                        <img src="img/ita.png" alt="Lingua">
+                        <span>Italiano </span><span>&or;</span>
+                        <div class="social">
+                            <a href=""><i class="fab fa-twitter"></i></a>
+                            <a href=""><i class="fab fa-instagram"></i></a>
+                            <a href=""><i class="fab fa-facebook"></i></a>
+                            <a href=""><i class="fab fa-youtube"></i></a>
+                        </div>
                 </div>
-               <div class="div-footer prodotto">
-                   <ul>
-                       <li class="primo-li"> Prodotto</li>
-                       <li><a href="">Scarica</a></li>
-                       <li><a href="">Perchè Discord</a></li>
-                       <li><a href="">Nitro</a></li>
-                       <li><a href="">Sicurezza</a></li>
-                       <li><a href="">Assistenza</a></li>
-                   </ul>
-
-               </div>
-               
-               <div class="div-footer compagnia">
-                <ul>
-                    <li class="primo-li"> Compagnia</li>
-                    <li><a href="">Scarica</a></li>
-                    <li><a href="">Perchè Discord</a></li>
-                    <li><a href="">Nitro</a></li>
-                    <li><a href="">Sicurezza</a></li>
-                    <li><a href="">Assistenza</a></li>
-                </ul>
-
-            </div>
-            <div class="div-footer risorse">
-                <ul>
-                    <li class="primo-li"> Risorse</li>
-                    <li><a href="">Scarica</a></li>
-                    <li><a href="">Perchè Discord</a></li>
-                    <li><a href="">Nitro</a></li>
-                    <li><a href="">Sicurezza</a></li>
-                    <li><a href="">Assistenza</a></li>
-                    <li><a href="">Perchè Discord</a></li>
-                    <li><a href="">Nitro</a></li>
-                    <li><a href="">Sicurezza</a></li>
-                    <li><a href="">Assistenza</a></li>
-                    <li><a href="">Nitro</a></li>
-                </ul>
-
-            </div>
-            <div class="div-footer norme">
-                <ul>
-                    <li class="primo-li"> Norme</li>
-                    <li><a href="">Scarica</a></li>
-                    <li><a href="">Perchè Discord</a></li>
-                    <li><a href="">Nitro</a></li>
-                    <li><a href="">Sicurezza</a></li>
-                    <li><a href="">Assistenza</a></li>
-                </ul>
-
-            </div>
-            
+                <div class="div-footer prodotto">
+                    <ul>
+                        <li class="primo-li"> Prodotto</li>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perchè Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="div-footer compagnia">
+                    <ul>
+                        <li class="primo-li"> Compagnia</li>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perchè Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="div-footer risorse">
+                    <ul>
+                        <li class="primo-li"> Risorse</li>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perchè Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                        <li><a href="">Perchè Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+                <div class="div-footer norme">
+                    <ul>
+                        <li class="primo-li"> Norme</li>
+                        <li><a href="">Scarica</a></li>
+                        <li><a href="">Perchè Discord</a></li>
+                        <li><a href="">Nitro</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Assistenza</a></li>
+                    </ul>
+                </div>
+            </section>
+            <!-- seconda parte del footer  -->
+            <section class="top">
+                <img src="img/logo.svg" alt="Logo Discard">
+                <button class="button1 button-main">Registrati</button>
             </section>
         </footer>
-
-
     </body>
 </html>
