--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 </div>
             </section>
             <!-- seconda parte del footer  -->
-            <section class="top">
+            <section class="top div-padre">
                 <img src="img/logo.svg" alt="Logo Discard">
                 <button class="button1 button-main">Registrati</button>
             </section>
