--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
                     <h2>Tecnologia affidabile per tenersi in contatto</h2>
                     <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                     <img src="img/item4-big.svg" alt="Immagine quarta sezione">
-                    <h3>Pronto a iniziare una nuova avventura?</h3>
-                    <button class="button1 button-main"><i class="fas fa-long-arrow-alt-down"></i>Scarica per Mac</button>
+                    <div class="stars">
+                        <h3>Pronto a iniziare una nuova avventura?</h3>
+                        <button class="button1 button-main"><i class="fas fa-long-arrow-alt-down"></i>Scarica per Mac</button>
+                    </div>
                 </div>  
             </section>
         </main>
